# OpenCV

./: CMakeLists.txt  Canny.cpp  Laplance.cpp  README.md  Sobel.cpp  addWeighted.cpp  backgroundToBlack.cpp  bitwise_not.cpp  chulibianyuan.cpp  cvtColor.cpp  dianduobianxingceshi.cpp  dilateAndErode.cpp  equalizeHistogram.cpp  extractShuipingxian.cpp  faceID.cpp  filter2D.cpp  findContours.cpp  histogramCalculate.cpp  huofuyuanjiance.cpp  huofuzhixianjiance.cpp  imageMoments.cpp  julibianhuanyufenshuiling.cpp  light.cpp  lunkuojuxingkuang.cpp  mohu1.cpp  mohu2.cpp  morphology.cpp  point_line.cpp  scalar.cpp  templatematch.cpp  threshold.cpp  tubao.cpp  tuxiangjinzita.cpp  xiangsuchongyingshe.cpp  zhifangtubijiao.cpp  zhifangtufanxiangtoushe.cpp  zidingyixianxinglvbo.cpp  zidingyixianxinglvbo2.cpp
