cmake_minimum_required(VERSION 3.13)
project(Clion_Opencv)

set(CMAKE_CXX_STANDARD 17)

add_executable(cvtColor cvtColor.cpp)
add_executable(filter2D filter2D.cpp)
add_executable(scalar scalar.cpp)
add_executable(bitwise_not bitwise_not.cpp)
add_executable(addWeighted addWeighted.cpp)
add_executable(light light.cpp)
add_executable(point_line point_line.cpp)
add_executable(mohu1 mohu1.cpp)
add_executable(mohu2 mohu2.cpp)
add_executable(dilateAndErode dilateAndErode.cpp)
add_executable(morphology morphology.cpp)
add_executable(faceID faceID.cpp)
add_executable(extractShuipingxian extractShuipingxian.cpp)
add_executable(tuxiangjinzita tuxiangjinzita.cpp)
add_executable(threshold threshold.cpp)
add_executable(zidingyixianxinglvbo zidingyixianxinglvbo.cpp)
add_executable(zidingyixianxinglvbo2 zidingyixianxinglvbo2.cpp)
add_executable(chulibianyuan chulibianyuan.cpp)
add_executable(Sobel Sobel.cpp)
add_executable(Laplance Laplance.cpp)
add_executable(Canny Canny.cpp)
add_executable(huofuzhixianjiance huofuzhixianjiance.cpp)
add_executable(huofuyuanjiance huofuyuanjiance.cpp)
add_executable(xiangsuchongyingshe xiangsuchongyingshe.cpp)
add_executable(equalizeHistogram equalizeHistogram.cpp)
add_executable(histogramCalculate histogramCalculate.cpp)
add_executable(zhifangtubijiao zhifangtubijiao.cpp)
add_executable(zhifangtufanxiangtoushe zhifangtufanxiangtoushe.cpp)
add_executable(templatematch templatematch.cpp)
add_executable(findContours findContours.cpp)
add_executable(tubao tubao.cpp)
add_executable(lunkuojuxingkuang lunkuojuxingkuang.cpp)
add_executable(imageMoments imageMoments.cpp)
add_executable(dianduobianxingceshi dianduobianxingceshi.cpp)
add_executable(julibianhuanyufenshuiling julibianhuanyufenshuiling.cpp)
add_executable(backgroundToBlack backgroundToBlack.cpp)


set(OpenCV_DIR D:\\opencv4.0\\opencv\\mingw64_build\\install)
find_package(OpenCV 4 REQUIRED)
include_directories(${OpenCV_INCLUDE_DIRS})
target_link_libraries(filter2D ${OpenCV_LIBS})
target_link_libraries(cvtColor ${OpenCV_LIBS})
target_link_libraries(scalar ${OpenCV_LIBS})
target_link_libraries(bitwise_not ${OpenCV_LIBS})
target_link_libraries(addWeighted ${OpenCV_LIBS})
target_link_libraries(light ${OpenCV_LIBS})
target_link_libraries(point_line ${OpenCV_LIBS})
target_link_libraries(mohu1 ${OpenCV_LIBS})
target_link_libraries(mohu2 ${OpenCV_LIBS})
target_link_libraries(dilateAndErode ${OpenCV_LIBS})
target_link_libraries(morphology ${OpenCV_LIBS})
target_link_libraries(faceID ${OpenCV_LIBS})
target_link_libraries(extractShuipingxian ${OpenCV_LIBS})
target_link_libraries(tuxiangjinzita ${OpenCV_LIBS})
target_link_libraries(threshold ${OpenCV_LIBS})
target_link_libraries(zidingyixianxinglvbo ${OpenCV_LIBS})
target_link_libraries(zidingyixianxinglvbo2 ${OpenCV_LIBS})
target_link_libraries(chulibianyuan ${OpenCV_LIBS})
target_link_libraries(Sobel ${OpenCV_LIBS})
target_link_libraries(Laplance ${OpenCV_LIBS})
target_link_libraries(Canny ${OpenCV_LIBS})
target_link_libraries(huofuzhixianjiance ${OpenCV_LIBS})
target_link_libraries(huofuyuanjiance ${OpenCV_LIBS})
target_link_libraries(xiangsuchongyingshe ${OpenCV_LIBS})
target_link_libraries(equalizeHistogram ${OpenCV_LIBS})
target_link_libraries(histogramCalculate ${OpenCV_LIBS})
target_link_libraries(zhifangtubijiao ${OpenCV_LIBS})
target_link_libraries(zhifangtufanxiangtoushe ${OpenCV_LIBS})
target_link_libraries(templatematch ${OpenCV_LIBS})
target_link_libraries(findContours ${OpenCV_LIBS})
target_link_libraries(tubao ${OpenCV_LIBS})
target_link_libraries(lunkuojuxingkuang ${OpenCV_LIBS})
target_link_libraries(imageMoments ${OpenCV_LIBS})
target_link_libraries(dianduobianxingceshi ${OpenCV_LIBS})
target_link_libraries(julibianhuanyufenshuiling ${OpenCV_LIBS})
target_link_libraries(backgroundToBlack ${OpenCV_LIBS})